errorlog.txt
Main.java:7: error: class, interface, or enum expected
}import java.util.*;
 ^
1 error
